cmake_minimum_required(VERSION 3.19)
project(proxy C)

set(CMAKE_C_STANDARD 99)

add_executable(proxy main.c )

add_subdirectory(src/client)
add_subdirectory(src/server)
add_subdirectory(src/udpserver)
add_subdirectory(src/udpclient)
add_subdirectory(src/tcpproxy)
add_subdirectory(src/servent2)
add_subdirectory(src/servent1)
add_subdirectory(src/hosten)
add_subdirectory(src/thread)
add_subdirectory(src/poll)
add_subdirectory(src/epoll)
add_subdirectory(src/udpproxy)
add_subdirectory(src/test)
add_subdirectory(src/date1)
add_subdirectory(src/date2)
add_subdirectory(src/bytes)
add_subdirectory(src/unix1)
add_subdirectory(src/unix11)
add_subdirectory(src/selectTcpUdp)
add_subdirectory(src/tree)
add_subdirectory(src/treebinarysearch)
add_subdirectory(src/recursion)